# pdf-extractext

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.bat  start.sh
.github/workflows/: python-app.yml
app/: db.py  interface.py  main.py  settings.py
app/repositories/: document_repository.py
app/services/: checksum_service.py  document_builder.py  document_service.py  pdf_service.py
tests/: test_checksum_service.py  test_document_builder.py  test_document_repository.py  test_document_service.py  test_documents_crud.py  test_interface.py  test_pdf_service.py  test_settings.py  test_upload.py
