[project]
name = "pdf-extractext-api"
version = "0.1.0"
description = "Servicio FastAPI para extracción de texto de PDFs"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.32.0",
    "httpx==0.27.2",
    "python-multipart",
    "PyMuPDF==1.24.3",
    "pymongo==4.17.0",
    "pytesseract==0.3.10",
    "python-dotenv==1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
