[project]
name = "pdf-extractext-api"
version = "0.1.0"
description = "Servicio FastAPI para extracción de texto de PDFs"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "PDF Extract", email = "contact@pdfextract.local"}]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.32.0",
    "httpx==0.27.2",
    "python-multipart>=0.0.6",
    "pymupdf>=1.25.0",
    "Pillow>=10.0.0",
    "pymongo==4.17.0",
    "pytesseract==0.3.10",
    "python-dotenv==1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "ruff==0.3.0",
    "mypy==1.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "unit: unit tests",
    "integration: integration tests"
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N"]
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
